feat: Update project name and branding to KAI
Refactors the project to reflect its new branding as "KAI - Personal AI Companion". This includes updating the `package.json`, `index.html` title and favicon, and `metadata.json` name and description to align with the new identity.

The core functionality remains the same, focusing on providing a sophisticated AI assistant.

The changes aim to create a more cohesive and professional brand presence for the application.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "copy-of-kingkana-app",
+  "name": "kai---personal-ai-companion",
   "private": true,
   "version": "0.0.0",
   "type": "module",
